// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnackbarComponent should render a snackbar when message recived 1`] = `
<termo-snackbar
  el={[Function ElementRef]}
  messagesSub={[Function Subscriber]}
  snackbar={[Function MDCSnackbar]}
  snackbarService={[Function MockSnapshotService]}
>
  <div
    aria-atomic="true"
    aria-live="assertive"
    class="mdc-snackbar mdc-snackbar--align-start mdc-snackbar--active"
  >
    <div
      class="mdc-snackbar__text"
    >
      Something is wrong
    </div>
    <div
      class="mdc-snackbar__action-wrapper"
    >
      <button
        aria-hidden="true"
        class="mdc-snackbar__action-button"
        type="button"
      />
    </div>
  </div>
</termo-snackbar>
`;

exports[`SnackbarComponent should render the snackbar component 1`] = `
<termo-snackbar
  el={[Function ElementRef]}
  messagesSub={[Function Subscriber]}
  snackbar={[Function MDCSnackbar]}
  snackbarService={[Function MockSnapshotService]}
>
  <div
    aria-atomic="true"
    aria-hidden="true"
    aria-live="assertive"
    class="mdc-snackbar mdc-snackbar--align-start"
  >
    <div
      class="mdc-snackbar__text"
    />
    <div
      class="mdc-snackbar__action-wrapper"
    >
      <button
        aria-hidden="true"
        class="mdc-snackbar__action-button"
        type="button"
      />
    </div>
  </div>
</termo-snackbar>
`;
